@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-04-15T03:16:22Z",
+  "timestamp" : "2024-04-15T16:14:10Z",
   "count_outdated" : 1632,
   "uniques_outdated" : 893,
-  "count" : 1633,
-  "uniques" : 894,
+  "count" : 1634,
+  "uniques" : 895,
   "clones" : [
     {
       "timestamp": "2024-04-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
